@@ -18,13 +18,13 @@
   </p>
   {% block tables %}
   <p><strong>{{ _('Indices and tables:') }}</strong></p>
-  <table class="contentstable" align="center"><tr>
-    <td width="50%">
+  <table class="contentstable"><tr>
+    <td style="width: 50%">
       <p class="biglink"><a class="biglink" href="{{ pathto("contents") }}">{{ _('Complete Table of Contents') }}</a><br>
          <span class="linkdescr">{{ _('lists all sections and subsections') }}</span></p>
       <p class="biglink"><a class="biglink" href="{{ pathto("search") }}">{{ _('Search Page') }}</a><br>
          <span class="linkdescr">{{ _('search this documentation') }}</span></p>
-    </td><td width="50%">
+    </td><td style="width: 50%">
       <p class="biglink"><a class="biglink" href="{{ pathto("modindex") }}">{{ _('Global Module Index') }}</a><br>
          <span class="linkdescr">{{ _('quick access to all modules') }}</span></p>
       <p class="biglink"><a class="biglink" href="{{ pathto("genindex") }}">{{ _('General Index') }}</a><br>
